<resources>
    <string name="app_name">TaleNet</string>
    <string name="masukkan_password">Enter Password</string>
    <string name="masukkan_email">Enter Email</string>
    <string name="email_error">Invalid email format</string>
    <string name="password_error">Password must be at least 8 characters long</string>
    <string name="login_title">Ready to share your story?</string>
    <string name="login_subtitle">Enter your details first</string>
    <string name="register_prompt">Don\'t have an account? Register here</string>
    <string name="register_title">Complete your details below</string>
    <string name="masukkan_nama">Enter Name</string>
    <string name="login_prompt">Already have an account? Log in here</string>
    <string name="btn_regist">Register</string>
    <string name="btn_login">Login</string>
    <string name="regist_successful">Registration successful, please log in</string>
    <string name="regist_fail">Registration failed</string>
    <string name="et_name_error">Name cannot be empty</string>
    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="login_needed">Please log in first</string>
    <string name="login_successful">Login successful</string>
    <string name="login_fail">Login failed</string>
    <string name="image_story_content_desc">image from the story</string>
    <string name="fab_addstory_content_desc">add a story</string>
    <string name="story_image_content_description">image from the story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Create Story</string>
    <string name="enter_story_description">Enter description\n</string>
    <string name="image_uploaded">Image uploaded</string>
    <string name="uploaded_image_content_description">image to be uploaded</string>
    <string name="login_image_content_description">Login character image</string>
    <string name="register_image_content_desription">Register character image</string>
    <string name="talenet">TaleNet.</string>
    <string name="connecting_everyone_everywhere">Connecting everyone everywhere</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps\n</string>
    <string name="upload_with_location">Upload with Location?</string>
    <string name="setting_to_change_language">Setting to change language</string>
</resources>